// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-pagination appearance tests should render as complex type in dark appearance: render dark complex pagination 1`] = `
<ic-pagination appearance="dark" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination appearance tests should render as complex type in light appearance: render light complex pagination 1`] = `
<ic-pagination appearance="light" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination appearance tests should render as simple type in dark appearance: render dark simple pagination 1`] = `
<ic-pagination appearance="dark" pages="15">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination appearance tests should render as simple type in light appearance: render light simple pagination 1`] = `
<ic-pagination appearance="light" pages="15">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 0 adjacent items and 0 boundary items with default page set at 7: render complex type with 0 adjacent items and 0 boundary items and default page 7 1`] = `
<ic-pagination adjacent-page-count="0" boundary-page-count="0" default-page="7" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="start-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-7" page="7" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 7
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 0 adjacent items and 0 boundary items with default page set at 15: render complex type with 0 adjacent items and 0 boundary items and default page 15 1`] = `
<ic-pagination adjacent-page-count="0" boundary-page-count="0" default-page="15" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="start-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-14" page="14" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" disabled="" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" disabled="" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 15
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 0 adjacent items and 0 boundary items: render complex type with 0 adjacent items and 0 boundary items 1`] = `
<ic-pagination adjacent-page-count="0" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 0 adjacent items and 1 boundary items: render complex type with 0 adjacent items and 1 boundary items 1`] = `
<ic-pagination adjacent-page-count="0" boundary-page-count="1" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 0 adjacent items and 2 boundary items: render complex type with 0 adjacent items and 2 boundary items 1`] = `
<ic-pagination adjacent-page-count="0" boundary-page-count="2" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-14" page="14" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 1 adjacent items and 2 boundary items: render complex type with 1 adjacent items and 2 boundary items 1`] = `
<ic-pagination adjacent-page-count="1" boundary-page-count="2" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-6" page="6" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-14" page="14" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 2 adjacent items and 0 boundary items: render complex type with 2 adjacent items and 0 boundary items 1`] = `
<ic-pagination adjacent-page-count="2" boundary-page-count="0" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-6" page="6" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 2 adjacent items and 1 boundary items: render complex type with 2 adjacent items and 1 boundary items 1`] = `
<ic-pagination adjacent-page-count="2" boundary-page-count="1" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-6" page="6" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-7" page="7" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 2 adjacent items and 2 boundary items: render complex type with 2 adjacent items and 2 boundary items 1`] = `
<ic-pagination adjacent-page-count="2" boundary-page-count="2" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-6" page="6" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-7" page="7" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-8" page="8" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-14" page="14" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type with 20 pages: render complex pagination with 20 pages 1`] = `
<ic-pagination pages="20" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-20" page="20" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type without first page button: render complex pagination with no first page button 1`] = `
<ic-pagination hide-first-page-button="true" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type without last page button: render complex pagination with no last page button 1`] = `
<ic-pagination hide-last-page-button="true" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render as complex type: render complex pagination 1`] = `
<ic-pagination pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-15" page="15" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should render in complex type with 1 adjacent items and 0 boundary items: render complex type with 1 adjacent items and 0 boundary items 1`] = `
<ic-pagination adjacent-page-count="1" boundary-page-count="0" pages="15" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination complex type should set the complex pagination aria label when accessible-label prop is provided 1`] = `
<ic-pagination accessible-label="Custom Pagination Label" pages="10" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Custom Pagination Label" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="end-ellipsis" theme="inherit" type="ellipsis"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-10" page="10" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render all pages when total pages less than min width based on boundary-page-count and adjacent-page-count: pages less than adjacent-page-count + boundary-page-count 1`] = `
<ic-pagination adjacent-page-count="2" boundary-page-count="2" pages="11" type="complex">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item id="pagination-item-1" page="1" selected="" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-2" page="2" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-3" page="3" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-4" page="4" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-5" page="5" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-6" page="6" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-7" page="7" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-8" page="8" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-9" page="9" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-10" page="10" theme="inherit" type="page"></ic-pagination-item>
      <ic-pagination-item id="pagination-item-11" page="11" theme="inherit" type="page"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
    <span aria-live="polite" class="sr-only">
      Page 1
    </span>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render disabled 1`] = `
<ic-pagination disabled="" pages="10">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" class="disabled" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item disabled="" label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" disabled="" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" disabled="" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render disabled: disabled-removed 1`] = `
<ic-pagination pages="10">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render on the last page: render on the last page 1`] = `
<ic-pagination default-page="15" pages="15">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="15" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" disabled="" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" disabled="" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render with 10 pages: render with ten pages 1`] = `
<ic-pagination pages="10">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render with first and last buttons disabled: no first or last page button 1`] = `
<ic-pagination hide-first-page-button="true" hide-last-page-button="true" pages="15">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render with interactions disabled: loading 1`] = `
<ic-pagination loading="true" pages="15">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render with the default page selected: render at the default page 1`] = `
<ic-pagination default-page="4" pages="15">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="4" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should render without current page: no current page 1`] = `
<ic-pagination hide-current-page="true" pages="15">
  <template shadowrootmode="open">
    <nav aria-label="Pagination Navigation" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item class="hide-current-page" label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;

exports[`ic-pagination simple appearance component should set the simple pagination aria label when accessible-label prop is provided 1`] = `
<ic-pagination accessible-label="Custom Pagination Label" pages="10">
  <template shadowrootmode="open">
    <nav aria-label="Custom Pagination Label" role="navigation">
      <ic-button aria-label="Go to first page" class="first-last page-button" disabled="" id="first-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to previous page" class="flip next-previous page-button" disabled="" id="previous-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-pagination-item label="Page" page="1" theme="inherit" type="simple-current"></ic-pagination-item>
      <ic-button aria-label="Go to next page" class="next-previous page-button" id="next-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
      <ic-button aria-label="Go to last page" class="first-last flip page-button" id="last-page-button" theme="inherit" variant="icon-tertiary">
        svg
      </ic-button>
    </nav>
  </template>
</ic-pagination>
`;
